CubeProgrammer_API.h

/* -------------------------------------------------------------------------------------------- */
/*                                      Errors Enumerations                                     */
/* -------------------------------------------------------------------------------------------- */

/**
 * \enum  cubeProgrammerVerbosityLevel
 * \brief List of verbosity levels.
 */
enum cubeProgrammerVerbosityLevel {
    /** no messages ever printed by the library */
    CUBEPROGRAMMER_VER_LEVEL_NONE   = 0,

    /** warning, error and success messages are printed (default) */
    CUBEPROGRAMMER_VER_LEVEL_ONE    = 1,

    /** error roots informational messages are printed */
    CUBEPROGRAMMER_VER_LEVEL_TWO    = 2,

    /** debug and informational messages are printed */
    CUBEPROGRAMMER_VER_LEVEL_DEBUG  = 3,

    /** no progress bar is printed in the output of the library */
    CUBEPROGRAMMER_NO_PROGRESS_BAR  = 4, /* progress bars are printed only with verbosity level one */
};
/**
 * \enum  cubeProgrammerError
 * \brief List of errors that can be occured.
 */
enum cubeProgrammerError {
    /** Success (no error) */
    CUBEPROGRAMMER_NO_ERROR = 0,

    /** Device not connected */
    CUBEPROGRAMMER_ERROR_NOT_CONNECTED = -1,

    /** Device not found */
    CUBEPROGRAMMER_ERROR_NO_DEVICE = -2,

    /** Device connection error */
    CUBEPROGRAMMER_ERROR_CONNECTION = -3,

    /** No such file  */
    CUBEPROGRAMMER_ERROR_NO_FILE = -4,

    /** Operation not supported or unimplemented on this interface */
    CUBEPROGRAMMER_ERROR_NOT_SUPPORTED = -5,

    /** Interface not supported or unimplemented on this plateform */
    CUBEPROGRAMMER_ERROR_INTERFACE_NOT_SUPPORTED = -6,

    /** Insufficient memory */
    CUBEPROGRAMMER_ERROR_NO_MEM = -7,

    /** Wrong parameters */
    CUBEPROGRAMMER_ERROR_WRONG_PARAM = -8,

    /** Memory read failure */
    CUBEPROGRAMMER_ERROR_READ_MEM = -9,

    /** Memory write failure */
    CUBEPROGRAMMER_ERROR_WRITE_MEM = -10,

    /** Memory erase failure */
    CUBEPROGRAMMER_ERROR_ERASE_MEM = -11,

    /** File format not supported for this kind of device */
    CUBEPROGRAMMER_ERROR_UNSUPPORTED_FILE_FORMAT = -12,

    /** Refresh required **/
    CUBEPROGRAMMER_ERROR_REFRESH_REQUIRED = -13,

    /** Refresh required **/
    CUBEPROGRAMMER_ERROR_NO_SECURITY = -14,

    /** Changing frequency problem **/
    CUBEPROGRAMMER_ERROR_CHANGE_FREQ = -15,

    /** RDP Enabled error **/
    CUBEPROGRAMMER_ERROR_RDP_ENABLED = -16,

    /* NB: Remember to update CUBEPROGRAMMER_ERROR_COUNT below. */

    /** Other error */
    CUBEPROGRAMMER_ERROR_OTHER = -99,
};
/* -------------------------------------------------------------------------------------------- */
/*                         Bootloader Data Structures and Enumerations                          */
/* -------------------------------------------------------------------------------------------- */

/**
 * \enum  usartParity
 * \brief The parity bit in the data frame of the USART communication tells the receiving device if there is any error in the data bits.
 */
typedef enum usartParity
{
    EVEN = 0,               /**< Even parity bit. */
    ODD = 1,                /**< Odd parity bit. */
    NONE = 2,               /**< No check parity. */
}usartParity;
/**
 * \enum  usartFlowControl
 * \brief UART Flow Control is a method for devices to communicate with each other over UART without the risk of losing data.
 */
typedef enum usartFlowControl
{
    OFF = 0,                /**< No flow control.  */
    HARDWARE = 1,           /**< Hardware flow control : RTS/CTS.  */
    SOFTWARE = 2,           /**< Software flow control : Transmission is started and stopped by sending special characters. */
}usartFlowControl;
/**
 * \struct  dfuDeviceInfo
 * \brief   Get DFU device informations .
 */
typedef struct dfuDeviceInfo
{
    char usbIndex[10];                  /**< USB index. */
    int busNumber;                      /**< Bus number. */
    int addressNumber;                  /**< Address number. */
    char productId[100];                /**< Product number. */
    char serialNumber[100];             /**< Serial number. */
    unsigned int dfuVersion;            /**< DFU version. */
}dfuDeviceInfo;
/**
 * \struct  usartConnectParameters
 * \brief   Specify the USART connect parameters.
 */
typedef struct usartConnectParameters
{
    char portName[100];             /**< Interface identifier: COM1, COM2, /dev/ttyS0...*/
    unsigned int  baudrate;         /**< Speed transmission: 115200, 9600... */
    usartParity parity;             /**< Parity bit: value in usartParity. */
    unsigned char dataBits;         /**< Data bit: value in {6, 7, 8}. */
    float stopBits;                 /**< Stop bit: value in {1, 1.5, 2}. */
    usartFlowControl flowControl;   /**< Flow control: value in usartFlowControl. */
    unsigned char noinitBits;       /**< Set No Init bits: value in {0,1}. */
    char rdu;                       /**< request a read unprotect: value in {0,1}.*/
}usartConnectParameters;
/**
 * \struct  dfuConnectParameters
 * \brief   Specify the USB DFU connect parameters.
 */
typedef struct dfuConnectParameters
{
    char *usb_index;
    char rdu;                       /**< request a read unprotect: value in {0,1}.*/
}dfuConnectParameters;