caller/src/bindings.rs

#[doc = " no messages ever printed by the library"]
pub const cubeProgrammerVerbosityLevel_CUBEPROGRAMMER_VER_LEVEL_NONE: cubeProgrammerVerbosityLevel =
    0;
#[doc = " warning, error and success messages are printed (default)"]
pub const cubeProgrammerVerbosityLevel_CUBEPROGRAMMER_VER_LEVEL_ONE: cubeProgrammerVerbosityLevel =
    1;
#[doc = " error roots informational messages are printed"]
pub const cubeProgrammerVerbosityLevel_CUBEPROGRAMMER_VER_LEVEL_TWO: cubeProgrammerVerbosityLevel =
    2;
#[doc = " debug and informational messages are printed"]
pub const cubeProgrammerVerbosityLevel_CUBEPROGRAMMER_VER_LEVEL_DEBUG:
    cubeProgrammerVerbosityLevel = 3;
#[doc = " no progress bar is printed in the output of the library"]
pub const cubeProgrammerVerbosityLevel_CUBEPROGRAMMER_NO_PROGRESS_BAR:
    cubeProgrammerVerbosityLevel = 4;
#[doc = " \\enum  cubeProgrammerVerbosityLevel"]
#[doc = " \\brief List of verbosity levels."]
pub type cubeProgrammerVerbosityLevel = ::std::os::raw::c_int;
#[doc = " Success (no error)"]
pub const cubeProgrammerError_CUBEPROGRAMMER_NO_ERROR: cubeProgrammerError = 0;
#[doc = " Device not connected"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NOT_CONNECTED: cubeProgrammerError = -1;
#[doc = " Device not found"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NO_DEVICE: cubeProgrammerError = -2;
#[doc = " Device connection error"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_CONNECTION: cubeProgrammerError = -3;
#[doc = " No such file"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NO_FILE: cubeProgrammerError = -4;
#[doc = " Operation not supported or unimplemented on this interface"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NOT_SUPPORTED: cubeProgrammerError = -5;
#[doc = " Interface not supported or unimplemented on this plateform"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_INTERFACE_NOT_SUPPORTED: cubeProgrammerError =
    -6;
#[doc = " Insufficient memory"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NO_MEM: cubeProgrammerError = -7;
#[doc = " Wrong parameters"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_WRONG_PARAM: cubeProgrammerError = -8;
#[doc = " Memory read failure"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_READ_MEM: cubeProgrammerError = -9;
#[doc = " Memory write failure"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_WRITE_MEM: cubeProgrammerError = -10;
#[doc = " Memory erase failure"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_ERASE_MEM: cubeProgrammerError = -11;
#[doc = " File format not supported for this kind of device"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_UNSUPPORTED_FILE_FORMAT: cubeProgrammerError =
    -12;
#[doc = " Refresh required"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_REFRESH_REQUIRED: cubeProgrammerError = -13;
#[doc = " Refresh required"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_NO_SECURITY: cubeProgrammerError = -14;
#[doc = " Changing frequency problem"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_CHANGE_FREQ: cubeProgrammerError = -15;
#[doc = " RDP Enabled error"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_RDP_ENABLED: cubeProgrammerError = -16;
#[doc = " Other error"]
pub const cubeProgrammerError_CUBEPROGRAMMER_ERROR_OTHER: cubeProgrammerError = -99;
#[doc = " \\enum  cubeProgrammerError"]
#[doc = " \\brief List of errors that can be occured."]
pub type cubeProgrammerError = ::std::os::raw::c_int;
#[doc = "< Even parity bit."]
pub const usartParity_EVEN: usartParity = 0;
#[doc = "< Odd parity bit."]
pub const usartParity_ODD: usartParity = 1;
#[doc = "< No check parity."]
pub const usartParity_NONE: usartParity = 2;
#[doc = " \\enum  usartParity"]
#[doc = " \\brief The parity bit in the data frame of the USART communication tells the receiving device if there is any error in the data bits."]
pub type usartParity = ::std::os::raw::c_int;
#[doc = "< No flow control."]
pub const usartFlowControl_OFF: usartFlowControl = 0;
#[doc = "< Hardware flow control : RTS/CTS."]
pub const usartFlowControl_HARDWARE: usartFlowControl = 1;
#[doc = "< Software flow control : Transmission is started and stopped by sending special characters."]
pub const usartFlowControl_SOFTWARE: usartFlowControl = 2;
#[doc = " \\enum  usartFlowControl"]
#[doc = " \\brief UART Flow Control is a method for devices to communicate with each other over UART without the risk of losing data."]
pub type usartFlowControl = ::std::os::raw::c_int;
#[doc = " \\struct  dfuDeviceInfo"]
#[doc = " \\brief   Get DFU device informations ."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct dfuDeviceInfo {
    #[doc = "< USB index."]
    pub usbIndex: [::std::os::raw::c_char; 10usize],
    #[doc = "< Bus number."]
    pub busNumber: ::std::os::raw::c_int,
    #[doc = "< Address number."]
    pub addressNumber: ::std::os::raw::c_int,
    #[doc = "< Product number."]
    pub productId: [::std::os::raw::c_char; 100usize],
    #[doc = "< Serial number."]
    pub serialNumber: [::std::os::raw::c_char; 100usize],
    #[doc = "< DFU version."]
    pub dfuVersion: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_dfuDeviceInfo() {
    assert_eq!(
        ::std::mem::size_of::<dfuDeviceInfo>(),
        224usize,
        concat!("Size of: ", stringify!(dfuDeviceInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<dfuDeviceInfo>(),
        4usize,
        concat!("Alignment of ", stringify!(dfuDeviceInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).usbIndex as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(usbIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).busNumber as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(busNumber)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).addressNumber as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(addressNumber)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).productId as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(productId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).serialNumber as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(serialNumber)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dfuDeviceInfo>())).dfuVersion as *const _ as usize },
        220usize,
        concat!(
            "Offset of field: ",
            stringify!(dfuDeviceInfo),
            "::",
            stringify!(dfuVersion)
        )
    );
}
#[doc = " \\struct  usartConnectParameters"]
#[doc = " \\brief   Specify the USART connect parameters."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct usartConnectParameters {
    #[doc = "< Interface identifier: COM1, COM2, /dev/ttyS0..."]
    pub portName: [::std::os::raw::c_char; 100usize],
    #[doc = "< Speed transmission: 115200, 9600..."]
    pub baudrate: ::std::os::raw::c_uint,
    #[doc = "< Parity bit: value in usartParity."]
    pub parity: usartParity,
    #[doc = "< Data bit: value in {6, 7, 8}."]
    pub dataBits: ::std::os::raw::c_uchar,
    #[doc = "< Stop bit: value in {1, 1.5, 2}."]
    pub stopBits: f32,
    #[doc = "< Flow control: value in usartFlowControl."]
    pub flowControl: usartFlowControl,
    #[doc = "< Set No Init bits: value in {0,1}."]
    pub noinitBits: ::std::os::raw::c_uchar,
    #[doc = "< request a read unprotect: value in {0,1}."]
    pub rdu: ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_usartConnectParameters() {
    assert_eq!(
        ::std::mem::size_of::<usartConnectParameters>(),
        124usize,
        concat!("Size of: ", stringify!(usartConnectParameters))
    );
    assert_eq!(
        ::std::mem::align_of::<usartConnectParameters>(),
        4usize,
        concat!("Alignment of ", stringify!(usartConnectParameters))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).portName as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(portName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).baudrate as *const _ as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(baudrate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).parity as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(parity)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).dataBits as *const _ as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(dataBits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).stopBits as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(stopBits)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<usartConnectParameters>())).flowControl as *const _ as usize
        },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(flowControl)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<usartConnectParameters>())).noinitBits as *const _ as usize
        },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(noinitBits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<usartConnectParameters>())).rdu as *const _ as usize },
        121usize,
        concat!(
            "Offset of field: ",
            stringify!(usartConnectParameters),
            "::",
            stringify!(rdu)
        )
    );
}
#[doc = " \\struct  dfuConnectParameters"]
#[doc = " \\brief   Specify the USB DFU connect parameters."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dfuConnectParameters {
    pub usb_index: *mut ::std::os::raw::c_char,
    #[doc = "< request a read unprotect: value in {0,1}."]
    pub rdu: ::std::os::raw::c_char,
}
